--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,34 @@
-body,
-html {
-    width: 100%;
-    height: 100%;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;700&display=swap');
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-*, body {
+:root {
+  --text-color: #D4D4D4;
+}
+
+body {
     padding: 0px;
     margin: 0px;
-    font-family: "Consolas, 'Courier New', monospace";
-}
-
-body {        
+    font-family: 'Roboto Mono', sans-serif;
     background-color: #1E1E1E;
     font-size: 19px;
-    color: #D4D4D4;    
+    font-weight: 300;
+    color: var(--text-color);
 }
 
-h1,h2,h3,h4 {
+h1 {  
+  font-size: 40px;
+  letter-spacing: -3px;  
+  font-weight: 300;
+}
+
+h2,h3,h4,h5 {
     margin-bottom: 5px;
+    font-weight: 300;
 }
 
 header {
@@ -69,7 +80,7 @@ ul.onelinelist li {
     cursor: hand;
 }
 
-.somethingtoread {
+.somequestions {
     margin-top: 150px;
     cursor: pointer; 
     cursor: hand;
@@ -77,4 +88,20 @@ ul.onelinelist li {
 
 .stackoverflow div {
     margin-top:  15px;
+}
+
+.cursor {
+  font-weight: 700;
+  animation: 1s blink step-end infinite;
+}
+
+@keyframes blink {
+  from,
+  to {
+    color: transparent;
+  }
+
+  50% {
+    color: var(--text-color);
+  }
 }
